<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.text.Html"/>
        <import type="android.widget.CompoundButton"/>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.testpractice.edit.EditViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ed_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@{Html.fromHtml(@string/et_title_hint)}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.title}"
                tools:text="しまなみ海道" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_comment_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:hint="@string/et_comment_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:gravity="top"
                android:text="@={viewModel.comment}"
                tools:text="サイクリングがしたい" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_has_been_to"
                android:checked="@{viewModel.hasBeenTo}"
                android:onClick="@{(view) -> viewModel.setHasBeenTo(((CompoundButton)view).isChecked())}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cb_title"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <Button
                android:id="@+id/bt_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> viewModel.deletePlace()}"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/delete" />

            <Button
                android:id="@+id/bt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.savePlace()}"
                android:text="@string/save" />

        </LinearLayout>


    </LinearLayout>
</layout>